# opengl

./: .gitignore  CMakeLists.txt  README.md
0_camerascene/: CMakeLists.txt  Makefile  display.cpp  main.cpp  readfile.cpp  variables.h
0_camerascene/include/: Transform.h
0_camerascene/src/: Transform.cpp  display.cpp
0_test/: CMakeLists.txt
0_test/src/: main.cpp
1_camerascene/: CMakeLists.txt  readme.txt
1_camerascene/include/: variables.h
1_camerascene/shaders/: light.frag.glsl
1_camerascene/src/: main.cpp  readfile.cpp  shaders.cpp
1_camerasimulator/: CMakeLists.txt
2_camerasimulator/: CMakeLists.txt
2_camerasimulator/src/: 2_camerasimulator.cpp
2_gui/: CMakeLists.txt
3_gui/: CMakeLists.txt
3_gui/src/: 3_gui.cpp
3_gui_gl/: CMakeLists.txt
3_gui_gl/src/: 4_gui_gl.cpp
4_gui_gl/: CMakeLists.txt
4_gui_gl/src/: 4_gui_gl.cpp
cmake/: Config.cmake  FindFreeImage.cmake  Findglfw.cmake  Findglm.cmake
